test/arrays/return/returnArbitraryBadEltType.good
returnArbitraryBadEltType.chpl:1: In function 'inc':
returnArbitraryBadEltType.chpl:2: error: array element type mismatch in return from real(64) to int(64)
